fix: about page overflow and video thumb label

--- a/src/index.css
+++ b/src/index.css
@@ -22,9 +22,11 @@
 [view-mode="web"] {
   --default-margin-left: 40px;
   --footer-icons-align: flex-end;
+  --about-image-height: 330px;
 }
 
 [view-mode="mobile"] {
   --default-margin-left: 20px;
   --footer-icons-align: flex-start;
+  --about-image-height: 300px;
 }
